# openFDE

./: .gitignore  README.md  openfde.sh  pyproject.toml  setup.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
openfde/: __init__.py  __main__.py  agent_runner.py  agent_sessions.py  agent_settings.py  anthropic_transport.py  architect.py  autoland.py  autonomous_council.py  backfill.py  boot_cache.py  box_spec.py  claude_code_runner.py  claude_workflow.py  cli.py  codex_local_runner.py  council.py  council_bus.py  council_context.py  council_router.py  echo_transport.py  episode_commits.py  episode_llm_summary.py  episode_summary.py  execution.py  explain.py  external_council.py  failure_flow.py  feedback.py  filetree.py  focus.py  fs_watch.py  git_timeline.py  handoff_broker.py  instance_lock.py  intent_graph.py  intent_router.py  issue_intents.py  issue_repro.py  memory_kit.py  (+24 more)
scripts/: semantic_graph_probe.py
tests/: __init__.py  test_agent_settings.py  test_autoland.py  test_autonomous_council.py  test_backfill.py  test_backfill_quarantine.py  test_boot_cache.py  test_claude_code_runner.py  test_codex_local_runner.py  test_council_bus.py  test_council_context.py  test_council_handoff.py  test_council_router.py  test_echo_transport.py  test_episode_commits.py  test_episode_llm_summary.py  test_episode_summary.py  test_external_council.py  test_feedback.py  test_focus.py  test_fs_watch.py  test_git_timeline.py  test_handoff_broker.py  test_hatch_repair.py  test_instance_lock.py  test_intent_graph.py  test_intent_router.py  test_js_l1c.py  (+20 more)
(+73 files in other folders)
