[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfde"
version = "0.5.2"
description = "AI-native IDE where you draw architecture and the agent builds it"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.9"]

[project.scripts]
openfde = "openfde.cli:main"

[tool.setuptools]
packages = ["openfde"]
