[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfde"
version = "0.6.0"
description = "AI-native IDE where you draw architecture and the agent builds it"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.9"]

# OPTIONAL precise JS/TS parsing (L1-D). NOT required: without these, OpenFDE uses its built-in
# regex JS/TS assimilation; with them, architecture symbol/import extraction runs on a real
# tree-sitter AST. A missing/incompatible grammar degrades safely to the regex path.
#   pip install "openfde[treesitter]"
[project.optional-dependencies]
treesitter = ["tree-sitter>=0.22", "tree-sitter-javascript>=0.21", "tree-sitter-typescript>=0.21"]

[project.scripts]
openfde = "openfde.cli:main"

# Discover openfde + ALL its subpackages (language_packs, plugins_runtime, …) into the wheel,
# so a non-editable install isn't missing them.
[tool.setuptools.packages.find]
include = ["openfde*"]
